<resources>
    <string name="app_name">PhoneToDesktopAndroid</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="title_activity_login">Sign in</string>
    <string name="sign_out_label">Sign Out</string>

    <string name="share_text_label">Share Text to your Laptop!</string>
    <string name="edit_text_hint">https://&#8230;</string>
    <string name="share_button_icon">share button</string>
    <string name="send_button_icon">send button</string>
    <string name="settings_button_icon">settings button</string>

    <!--<string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>-->
</resources>
